@@ -23,3 +23,8 @@ Extensions
 
 Other Changes
 =============
+
+* Fix false negative for ``no-member`` when attempting to assign an instance
+  attribute to itself without any prior assignment.
+
+  Closes #1555
